--- a/gh-pages/assets/scss/header.scss
+++ b/gh-pages/assets/scss/header.scss
@@ -52,7 +52,7 @@ header {
 		.pure-button {
 			background-color: $green;
 			color: $greenDark;
-			font-weight: 300;
+			font-weight: 400;
 			@include border-radius(5px);
 		}
 	}
